style.css
:root {
    --shadow-color: 213deg 52% 0%;
    --shadow-elevation-low:
        0.3px 0.5px 0.8px hsl(var(--shadow-color) / 0.27),
        0.5px 1px 1.5px -0.6px hsl(var(--shadow-color) / 0.44),
        1.3px 2.5px 3.7px -1.3px hsl(var(--shadow-color) / 0.6);
    --shadow-elevation-medium:
        0.3px 0.5px 0.8px hsl(var(--shadow-color) / 0.23),
        1px 1.9px 2.8px -0.3px hsl(var(--shadow-color) / 0.31),
        1.8px 3.7px 5.4px -0.6px hsl(var(--shadow-color) / 0.4),
        3.4px 6.8px 9.9px -1px hsl(var(--shadow-color) / 0.48),
        6.3px 12.5px 18.3px -1.3px hsl(var(--shadow-color) / 0.56);
    --shadow-elevation-high:
        0.3px 0.5px 0.8px hsl(var(--shadow-color) / 0.21),
        2.3px 4.7px 6.8px -0.1px hsl(var(--shadow-color) / 0.25),
        4.2px 8.5px 12.4px -0.3px hsl(var(--shadow-color) / 0.29),
        6.2px 12.4px 18.1px -0.4px hsl(var(--shadow-color) / 0.33),
        8.6px 17.2px 25.1px -0.6px hsl(var(--shadow-color) / 0.37),
        11.7px 23.5px 34.3px -0.7px hsl(var(--shadow-color) / 0.41),
        15.9px 31.8px 46.4px -0.9px hsl(var(--shadow-color) / 0.45),
        21.3px 42.7px 62.3px -1px hsl(var(--shadow-color) / 0.48),
        28.5px 56.9px 83px -1.2px hsl(var(--shadow-color) / 0.52),
        37.5px 75px 109.4px -1.3px hsl(var(--shadow-color) / 0.56);

    --shadow-color-box: 158deg 100% 16%;
    --shadow-elevation-low-box:
        0.3px 0.5px 0.8px hsl(var(--shadow-color-box) / 0.27),
        0.5px 1px 1.5px -0.6px hsl(var(--shadow-color-box) / 0.44),
        1.3px 2.5px 3.7px -1.3px hsl(var(--shadow-color-box) / 0.6);
    --shadow-elevation-medium-box:
        0.3px 0.5px 0.8px hsl(var(--shadow-color-box) / 0.23),
        1px 1.9px 2.8px -0.3px hsl(var(--shadow-color-box) / 0.31),
        1.8px 3.7px 5.4px -0.6px hsl(var(--shadow-color-box) / 0.4),
        3.4px 6.8px 9.9px -1px hsl(var(--shadow-color-box) / 0.48),
        6.3px 12.5px 18.3px -1.3px hsl(var(--shadow-color-box) / 0.56);
    --shadow-elevation-high-box:
        0.3px 0.5px 0.8px hsl(var(--shadow-color-box) / 0.21),
        2.3px 4.7px 6.8px -0.1px hsl(var(--shadow-color-box) / 0.25),
        4.2px 8.5px 12.4px -0.3px hsl(var(--shadow-color-box) / 0.29),
        6.2px 12.4px 18.1px -0.4px hsl(var(--shadow-color-box) / 0.33),
        8.6px 17.2px 25.1px -0.6px hsl(var(--shadow-color-box) / 0.37),
        11.7px 23.5px 34.3px -0.7px hsl(var(--shadow-color-box) / 0.41),
        15.9px 31.8px 46.4px -0.9px hsl(var(--shadow-color-box) / 0.45),
        21.3px 42.7px 62.3px -1px hsl(var(--shadow-color-box) / 0.48),
        28.5px 56.9px 83px -1.2px hsl(var(--shadow-color-box) / 0.52),
        37.5px 75px 109.4px -1.3px hsl(var(--shadow-color-box) / 0.56);
}

body {
    height: auto;
    max-width: 100%;
    background-color: hsl(210deg, 30%, 8%);
    font-weight: 250;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    color: aliceblue;
    text-shadow: 0.25rem 0.125rem 10px #0f3a4b;
}

body * {
    user-select: none;
    -webkit-user-select: none;
    -moz-user-select: none;
}

.page {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
}

.page h1 {
    margin: 3rem 0;
    position: relative;
}

.page h1::before {
    position: absolute;
    font-size: 14pt;
    top: 40%;
    right: -110%;
    transform: rotateZ(10deg);
    content: "Works on mobile too!";
    text-decoration: underline 3px;
}

main {
    width: 100%;
    display: flex;
    justify-content: space-evenly;
    align-items: center;
}

.grid-slider-label {
    color: aliceblue;
    font-weight: bold;
    font-size: 13pt;
    text-shadow: 0.25rem 0.125rem 10px #0f3a4b;
}

button {
    -webkit-appearance: none;

    appearance: none;
    outline: none;

    width: 8rem;
    height: 2.5rem;

    margin: 0;
    padding: 0;

    -webkit-transition: .2s;
    transition: transform .2s;

    box-shadow: var(--shadow-elevation-medium);
    overflow: hidden;
    border: none;
    border-radius: 1rem;

    cursor: pointer;

    color: hsl(210deg, 30%, 8%);
    font-weight: bold;
    font-size: 13pt;
    text-shadow: 0.25rem 0.125rem 10px #000000;
}

button:hover {
    transform: scale(110%);
}

button:active {
    transform: scale(90%);
}

.control-panel {
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    flex-direction: column;
    gap: 2rem;
}

.sketch-area {
    border: 0.5rem black solid;
    box-shadow: var(--shadow-elevation-medium);

    border-radius: 0.5rem;
    /* width: 25rem; */

    width: min(25rem, 70vw);
    height: min(25rem, 70vw);
    display: grid;
    gap: 0;

    touch-action: manipulation;
}

.sketch-area .pixel {
    /* border: 1px black solid; */
    /* min-width: 1em;
    min-height: 1em;
    content: ""; */

    background-color: #ffffff;
}

.not-draggable {
    -webkit-user-drag: none;
    user-select: none;
    -moz-user-select: none;
    -webkit-user-select: none;
    -ms-user-select: none;
}

.overflow-hidden {
    overflow: hidden;
}

.color-pick {
    -webkit-appearance: none;

    appearance: none;
    outline: none;

    width: 5rem;
    height: 5rem;

    margin: 0;
    padding: 0;
    background-color: hsl(210deg, 30%, 8%);

    -webkit-transition: .2s;
    transition: transform .2s;

    box-shadow: var(--shadow-elevation-medium);

    border: none;
    border-radius: 50%;

    cursor: pointer;
    position: relative;
}

.color-pick::before {
    position: absolute;
    top: -40%;
    right: -190%;
    transform: rotateZ(-10deg);
    width: fit-content;
    content: "Change the color";
    text-decoration: underline 3px;
    color: aliceblue;
    font-weight: bold;
    font-size: 13pt;
    text-shadow: 0.25rem 0.125rem 10px #0f3a4b;
}

.color-pick::after {
    position: absolute;
    top: -10%;
    right: -130%;
    transform: rotateZ(10deg);


    background-repeat: no-repeat;
    background-size: 100% 100%;

    content: "";
    display: block;
    width: 5rem;
    height: 5rem;

    background-image: url(./images/svgs/Arrow-1.svg);
}

/* Mouse-over effects */
.color-pick:hover {
    transform: scale(110%);
    /* Fully shown on mouse-over */
}

.color-pick:active {
    transform: scale(90%);
    /* Fully shown on mouse-over */
}

.color-pick::-webkit-color-swatch {
    padding: 0;
    border-radius: 100%;
    border: 0;
}

.slider-container {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    gap: 1rem;
}

/* The slider itself */
.slider {
    -webkit-appearance: none;
    /* Override default CSS styles */
    appearance: none;
    width: 100%;
    /* Full-width */
    height: 0.5rem;
    /* Specified height */
    background: #717171;
    /* Grey background */
    outline: none;
    /* Remove outline */
    opacity: 0.7;
    /* Set transparency (for mouse-over effects on hover) */
    -webkit-transition: .2s;
    /* 0.2 seconds transition on hover */
    transition: opacity .2s;

    box-shadow: var(--shadow-elevation-medium);
    border-radius: 1rem;
}

/* Mouse-over effects */
.slider:hover {
    opacity: 1;

    /* Fully shown on mouse-over */
}

/* The slider handle (use -webkit- (Chrome, Opera, Safari, Edge) and -moz- (Firefox) to override default look) */
.slider::-webkit-slider-thumb {
    -webkit-appearance: none;
    /* Override default look */
    appearance: none;
    width: 1rem;
    /* Set a specific slider handle width */
    height: 1rem;
    /* Slider handle height */
    background: #04AA6D;
    /* Green background */
    cursor: grab;
    /* Cursor on hover */

    -webkit-transition: .2s;
    transition: transform .2s;

    box-shadow: var(--shadow-elevation-medium-box);
    border-radius: 1rem;
}

.slider::-webkit-slider-thumb:hover {
    transform: scale(120%);
}

.slider::-webkit-slider-thumb:active {
    cursor: grabbing;
    transform: scale(150%);
}

.slider::-moz-range-thumb {
    appearance: none;
    width: 1rem;
    /* Set a specific slider handle width */
    height: 1rem;
    /* Slider handle height */
    background: #04AA6D;
    /* Green background */
    cursor: -moz-grab;
    /* Cursor on hover */

    box-shadow: var(--shadow-elevation-medium-box);
    border-radius: 1rem;
}

.slider::-moz-range-thumb:active {
    cursor: -moz-grabbing;
}

a {
    margin-top: 5rem;
    font-size: 15pt;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    position: relative;
    color: #53bef3;

    font-weight: bold;
    font-size: 13pt;
    text-shadow: 0.25rem 0.125rem 10px #0f3a4b;
}


a:after {
    content: '';
    position: absolute;
    width: 100%;
    transform: scaleX(0);
    height: 2px;
    bottom: 1%;
    left: 0;
    background-color: #53bef3;
    transition: transform 0.25s ease-out;
}

a:hover:after {
    transform: scaleX(1);
}

.fancy-underline {
    position: relative
}

.fancy-underline:after {
    background-repeat: no-repeat;
    background-size: 100% 100%;
    content: "";
    display: block;
    height: .3em;
    left: -.2em;
    position: absolute;
    top: calc(100% - .15em);
    width: calc(100% + .4em)
}

.fancy-underline1:after {
    background-image: url("./images/svgs/underline-2.svg")
}

@media only screen and (max-width: 768px) {
    main {
        flex-direction: column-reverse;
    }

    .control-panel {
        margin-top: 4rem;
    }

    .page h1::before {
        position: absolute;
        font-size: 14pt;
        top: 40%;
        right: -150%;
        transform: rotateZ(10deg);
        content: "";
        text-decoration: underline 3px;
    }


}

@media only screen and (max-width: 425px) {
    .color-pick::before {
        content: "";
    }

    .color-pick::after {
        content: "";
        background-image: none;
    }
}

